[project]
name = "lgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "langgraph>=1.0.6",
    "langchain>=0.2.16",
    "langchain-core>=0.2.40",
    "langchain-openai>=0.1.20",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "huey>=2.5.2",
    "python-dotenv>=1.0.1",
]
